
2009-04-07 - 1.0-alpha-3 

- Tightened up some of the rendering to cater to different configuration.
- Added timeslotHeight config property so you can can specify the height of calendar time slots.
- Fixed problem where resizing an event causes a new event to be created  
- Fixed problem with click event  for calendar events firing twice.


2009-04-06 - 1.0-alpha-2
 - Removed jQuery UI Theme from source in favour of google hosted theme
 - Fixed bug with parsing dates in events supplied as milliseconds
 - Added minified and yui compressed versions of javascript
 - Fixed bug where current day remained highlighted after navigating to next / prev weeks


2009-04-05 - 1.0-alpha-1
 - Initial Release