@@ -144,12 +144,12 @@ table.week-calendar-time-slots {
 }
 
 
-.new-cal-event, .cal-event {
+.cal-event {
 	background-color: #68a1e5;	
-	filter:alpha(opacity=90);
-	-moz-opacity:0.9;
-	-khtml-opacity: 0.9;
-	opacity: 0.9;
+	filter:alpha(opacity=80);
+	-moz-opacity:0.8;
+	-khtml-opacity: 0.8;
+	opacity: 0.8;
 	position: absolute;	
 	text-align: center;
 	overflow: hidden;
@@ -164,7 +164,7 @@ table.week-calendar-time-slots {
 }
 
 
-.new-cal-event div, .cal-event div {
+.cal-event div {
 	padding: 0 5px;
 	
 }
