@@ -1,3 +1,10 @@
+CURRENT
+- Fixed problem caused by window resize event binding hanging around after calendar is removed from the DOM.
+- Wasn't returning a reference to the original jquery plugin object so chaining wasn't possible
+- Added calendarPreLoad and calendarPostLoad events that are called before and after events get loaded into the calendar.
+- Removed calendarRendered event as it was superseded by the calendarPostLoad event
+- Fixed bug in calendar scrolling to hour of day.
+- Added scrollToHourMillis config option for setting the duration of the scroll to hour of day animation. 
 
 2009-04-07 - 1.0-alpha-3 
 
